MDEV-3895 Version naming for MariaDB-Galera builds

This patch fixes both the reported issues :
(1) Included '-wsrep' to the server version information.

> select @@version;
+-----------------------------+
| @@version                   |
+-----------------------------+
| 5.5.33a-MariaDB-wsrep-debug |
+-----------------------------+

(2) The @@version_comment would no longer have XXXX
in the wsrep version information in case cmake couldn't
determine the current bzr revision.